--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="container">
     <div class="container text-center">
-      <div class="row row-cols-4">
+      <div class="row row-cols-2">
         <div class="col">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -96,5 +96,44 @@
       para as melhorias necessárias, contribui para um ambiente de trabalho mais
       saudável e produtivo, economizando tempo e recursos.
     </h5>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+      </div>
+    </div>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+      </div>
+    </div>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+      </div>
+    </div>
   </div>
 </div>
