--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -90,50 +90,14 @@
     </div>
     <div class="small-bar"></div>
     <h2>Analise Do Bem-Estar Corporativo</h2>
-    <h5>
-      insights valiosos sobre os colaboradores e a instituição, identificando
-      áreas de melhoria na gestão interna. Ao direcionar os esforços diretamente
-      para as melhorias necessárias, contribui para um ambiente de trabalho mais
-      saudável e produtivo, economizando tempo e recursos.
-    </h5>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">
-          Column
-        </div>
-        <div class="col">
-          Column
-        </div>
-        <div class="col">
-          Column
-        </div>
-      </div>
-    </div>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">
-          Column
-        </div>
-        <div class="col">
-          Column
-        </div>
-        <div class="col">
-          Column
-        </div>
-      </div>
-    </div>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col">
-          Column
-        </div>
-        <div class="col">
-          Column
-        </div>
-        <div class="col">
-          Column
-        </div>
-      </div>
+    <div class="text-box">
+      <h5>
+        Identificação de áreas de aprimoramento na gestão interna
+        por meio de valiosos insights sobre os colaboradores e a instituição. Ao
+        direcionar os esforços diretamente para as melhorias necessárias,
+        contribui-se para um ambiente de trabalho mais saudável e produtivo,
+        viabilizando tempo e recursos.
+      </h5>
     </div>
   </div>
 </div>
