--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
@@ -67,24 +67,9 @@
     </nav>
     <div *ngFor="let pergunta of perguntasST3; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
-      <input type="range" class="form-range range-concordancia" min="1" max="5" value="3">
-      <div class="row descricao-concordancia">
-        <div class="col">Discordo totalmente</div>
-        <div class="col">Discordo</div>
-        <div class="col">Indiferente</div>
-        <div class="col">Concordo</div>
-        <div class="col">Concordo totalmente</div>
-      </div>
-    </div> 
-
-    <nav class="navbar cabecalho-topicos">
-      <div class="container-fluid">
-        <a class="navbar-brand">Oportunidades de Crescimento</a>
-      </div>
-    </nav>
-    <div *ngFor="let pergunta of perguntasST4; let i = index">
-      <p class="mt-5">{{ pergunta }}</p>
-      <input type="range" class="form-range range-concordancia" min="1" max="5" value="3">
+      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados()">
+        <input type="range" class="form-range range-concordancia" formControlName="perguntaST3{{i}}" min="1" max="5" value="3">
+      </form>
       <div class="row descricao-concordancia">
         <div class="col">Discordo totalmente</div>
         <div class="col">Discordo</div>
@@ -143,23 +128,6 @@
       </div>
     </nav>
     <div *ngFor="let pergunta of perguntasSP3; let i = index">
-      <p class="mt-5">{{ pergunta }}</p>
-      <input type="range" class="form-range range-concordancia" min="1" max="5">
-      <div class="row descricao-concordancia">
-        <div class="col">Discordo totalmente</div>
-        <div class="col">Discordo</div>
-        <div class="col">Indiferente</div>
-        <div class="col">Concordo</div>
-        <div class="col">Concordo totalmente</div>
-      </div>
-    </div> 
-
-    <nav class="navbar cabecalho-topicos">
-      <div class="container-fluid">
-        <a class="navbar-brand">Apoio</a>
-      </div>
-    </nav>
-    <div *ngFor="let pergunta of perguntasSP4; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
       <input type="range" class="form-range range-concordancia" min="1" max="5">
       <div class="row descricao-concordancia">
@@ -230,24 +198,9 @@
       </div>
     </div> 
 
-    <nav class="navbar cabecalho-topicos">
-      <div class="container-fluid">
-        <a class="navbar-brand">Interações Diárias</a>
-      </div>
-    </nav>
-    <div *ngFor="let pergunta of perguntasRI4; let i = index">
-      <p class="mt-5">{{ pergunta }}</p>
-      <input type="range" class="form-range range-concordancia" min="1" max="5">
-      <div class="row descricao-concordancia">
-        <div class="col">Discordo totalmente</div>
-        <div class="col">Discordo</div>
-        <div class="col">Indiferente</div>
-        <div class="col">Concordo</div>
-        <div class="col">Concordo totalmente</div>
-      </div>
-    </div> 
   </table>
+
   <div class="text-center">
-    <button type="submit" class="btn btn-primary mt-4" (click)="salvarResultados(currentTab)">Salvar Resultados</button>
+    <button type="submit" class="btn btn-primary mt-4" (click)="salvarResultados()">Salvar</button>
   </div>
 </div>
