--- a/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
+++ b/frontend/src/app/components/pages/avaliacoes/colaborador/colaborador.component.html
@@ -16,7 +16,7 @@
   </div>
 
   <!--Satisfação no Trabalho-->
-  <table id="satisfacao-no-trabalho" class="container text-center mt-5" *ngIf="currentTab === 'satisfacao-no-trabalho'">
+  <table id="satisfacao-no-trabalho" class="container text-center mt-5" *ngIf="currentTab === 1">
     <div class="mx-4">
       <h2>Satisfação no Trabalho</h2>
       <h6>Avalia a satisfação dos colaboradores no ambiente profissional, focando em aspectos como gestão interna, benefícios, cultura organizacional e oportunidades de crescimento.</h6>
@@ -29,8 +29,8 @@
     </nav>
     <div *ngFor="let pergunta of perguntasST1; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
-      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados()">
-        <input type="range" class="form-range range-concordancia" formControlName="perguntaST1{{i}}" min="1" max="5" value="3">
+      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados(currentTab)">
+        <input type="range" class="form-range range-concordancia" formControlName="perguntaST1{{i}}" min="1" max="5">
       </form>
       <div class="row descricao-concordancia">
         <div class="col">Discordo totalmente</div>
@@ -48,8 +48,8 @@
     </nav>
     <div *ngFor="let pergunta of perguntasST2; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
-      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados()">
-        <input type="range" class="form-range range-concordancia" formControlName="perguntaST2{{i}}" min="1" max="5" value="3">
+      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados(currentTab)">
+        <input type="range" class="form-range range-concordancia" formControlName="perguntaST2{{i}}" min="1" max="5">
       </form>
       <div class="row descricao-concordancia">
         <div class="col">Discordo totalmente</div>
@@ -67,8 +67,8 @@
     </nav>
     <div *ngFor="let pergunta of perguntasST3; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
-      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados()">
-        <input type="range" class="form-range range-concordancia" formControlName="perguntaST3{{i}}" min="1" max="5" value="3">
+      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados(currentTab)">
+        <input type="range" class="form-range range-concordancia" formControlName="perguntaST3{{i}}" min="1" max="5">
       </form>
       <div class="row descricao-concordancia">
         <div class="col">Discordo totalmente</div>
@@ -81,7 +81,7 @@
   </table>
 
   <!--Satisfação Pessoal-->
-  <table id="satisfacao-no-trabalho" class="container text-center mt-5" *ngIf="currentTab === 'satisfacao-pessoal'">
+  <table id="satisfacao-no-trabalho" class="container text-center mt-5" *ngIf="currentTab === 2">
     <div class="mx-4">
       <h2>Satisfação Pessoal</h2>
       <h6>Explora aspectos a respeito da qualidade de vida pessoal que podem influenciar o equilíbrio
@@ -95,7 +95,9 @@
     </nav>
     <div *ngFor="let pergunta of perguntasSP1; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
-      <input type="range" class="form-range range-concordancia" min="1" max="5">
+      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados(currentTab)">
+        <input type="range" class="form-range range-concordancia" formControlName="perguntaSP1{{i}}" min="1" max="5">
+      </form>
       <div class="row descricao-concordancia">
         <div class="col">Discordo totalmente</div>
         <div class="col">Discordo</div>
@@ -112,7 +114,9 @@
     </nav>
     <div *ngFor="let pergunta of perguntasSP2; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
-      <input type="range" class="form-range range-concordancia" min="1" max="5">
+      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados(currentTab)">
+        <input type="range" class="form-range range-concordancia" formControlName="perguntaSP2{{i}}" min="1" max="5">
+      </form>
       <div class="row descricao-concordancia">
         <div class="col">Discordo totalmente</div>
         <div class="col">Discordo</div>
@@ -129,7 +133,9 @@
     </nav>
     <div *ngFor="let pergunta of perguntasSP3; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
-      <input type="range" class="form-range range-concordancia" min="1" max="5">
+      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados(currentTab)">
+        <input type="range" class="form-range range-concordancia" formControlName="perguntaSP3{{i}}" min="1" max="5">
+      </form>
       <div class="row descricao-concordancia">
         <div class="col">Discordo totalmente</div>
         <div class="col">Discordo</div>
@@ -141,7 +147,7 @@
   </table>
 
   <!--Relações Interpessoais-->
-  <table id="satisfacao-no-trabalho" class="container text-center mt-5" *ngIf="currentTab === 'relacoes-interpessoais'">
+  <table id="satisfacao-no-trabalho" class="container text-center mt-5" *ngIf="currentTab === 3">
     <div class="mx-5">
       <h2>Relações Interpessoais</h2>
       <h6>Avalia a qualidade das relações no trabalho e na vida pessoal, com foco em comunicação, colaboração e suporte social.</h6>
@@ -154,7 +160,9 @@
     </nav>
     <div *ngFor="let pergunta of perguntasRI1; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
-      <input type="range" class="form-range range-concordancia" min="1" max="5">
+      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados(currentTab)">
+        <input type="range" class="form-range range-concordancia" formControlName="perguntaRI1{{i}}" min="1" max="5">
+      </form>
       <div class="row descricao-concordancia">
         <div class="col">Discordo totalmente</div>
         <div class="col">Discordo</div>
@@ -171,7 +179,9 @@
     </nav>
     <div *ngFor="let pergunta of perguntasRI2; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
-      <input type="range" class="form-range range-concordancia" min="1" max="5">
+      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados(currentTab)">
+        <input type="range" class="form-range range-concordancia" formControlName="perguntaRI2{{i}}" min="1" max="5">
+      </form>
       <div class="row descricao-concordancia">
         <div class="col">Discordo totalmente</div>
         <div class="col">Discordo</div>
@@ -188,7 +198,9 @@
     </nav>
     <div *ngFor="let pergunta of perguntasRI3; let i = index">
       <p class="mt-5">{{ pergunta }}</p>
-      <input type="range" class="form-range range-concordancia" min="1" max="5">
+      <form  [formGroup]="avaliacaoFormGroup" (ngSubmit)="salvarResultados(currentTab)">
+        <input type="range" class="form-range range-concordancia" formControlName="perguntaRI3{{i}}" min="1" max="5">
+      </form>
       <div class="row descricao-concordancia">
         <div class="col">Discordo totalmente</div>
         <div class="col">Discordo</div>
@@ -201,6 +213,6 @@
   </table>
 
   <div class="text-center">
-    <button type="submit" class="btn btn-primary mt-4" (click)="salvarResultados()">Salvar</button>
+    <button type="submit" class="btn btn-primary mt-4" (click)="salvarResultados(currentTab)">Salvar</button>
   </div>
 </div>
