--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -8,8 +8,8 @@
     </button>
     <div class="collapse navbar-collapse flex-row-reverse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 .fs-5 fw-medium">
-        <li class="nav-item align-middle"><a class="nav-link" aria-current="page" routerLink="/admin">Estatísticas</a></li>
-        <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/colaborador">Avaliações</a></li>
+        <li class="nav-item align-middle"><a class="nav-link" aria-current="page" routerLink="/estatisticas">Estatísticas</a></li>
+        <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/avaliacao">Avaliações</a></li>
         <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/colaboradores">Colaboradores</a></li>
         <li class="nav-item dropdown">
           <a type="button" class="nav-link" role="button" data-bs-toggle="dropdown" aria-expanded="false">
