--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -84,7 +84,7 @@
   </div>
   <div class="small-bar"></div>
   <div class="text-center mb-5">
-    <h2 class="flex-column text-center">Analise Do Bem-Estar Corporativo</h2>
+    <h2 class="flex-column text-center">Análise do Bem-Estar Corporativo</h2>
     <h5>Identificação de áreas de aprimoramento na gestão interna
       por meio de valiosos insights sobre os colaboradores e a instituição. Ao
       direcionar os esforços diretamente para as melhorias necessárias,
