--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -26,3 +26,15 @@ body {
 body {
     margin: 0;
 }
+
+.button-save {
+    background-color: #185376;
+    border-color: #185376;
+    transition: .4s;
+}
+
+.button-save:hover {
+    background-color: #214153;
+    border-color: #214153;
+    transition: .4s;
+}
